--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
       <th>WIND</th>
       <th>BMP</th>
       <th>INA</th>
+      <th>I2S</th>
+      <th>UMC</th>
     </tr>
   </table>
   <table border="1" id="data">
